# PartyGames

./: .gitignore
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: helper.rs  lib.rs  messages.rs
