[package]
name = "party_games_server"
version = "0.1.0"
edition = "2024"
authors = ["Maj GuÄek <maj.gucek@gmail.com>"]
description = "Crossterm client for PartyGames"
license = "GPL-3.0"

[dependencies]
shared = { path = "../shared" }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
tokio = { version = "1.47.1", features= ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "2.0.1"

uuid = { version = "1.3.1", features = ["v4"] }

