[package]
name = "shared"
version = "0.1.0"
edition = "2024"
authors = ["Maj GuÄek <maj.gucek@gmail.com>"]
description = "Defined JSON for communication server/client for PartyGames"
license = "GPL-3.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
bincode = "2.0.1"

uuid = { version = "1.3.1", features = ["v4", "serde"] }

